More examples and crashes
* Added test for subclassing PSPDFViewController
* Added test for bookmark capturing (FAILS!)
* Added test for custom annotation provider (FAILS)
* Added test for adjusting annotation toolbar (DOES NOT BUILD)

--- a/PSPDFKit-Demo-Xamarin.iOS.csproj
+++ b/PSPDFKit-Demo-Xamarin.iOS.csproj
@@ -96,6 +96,9 @@
     <Compile Include="KSCatalogViewController.cs" />
     <Compile Include="Subclassing\KSExampleAnnotationViewController.cs" />
     <Compile Include="Subclassing\KSVerticalAnnotationToolbar.cs" />
+    <Compile Include="Subclassing\KSNoDocumentPDFViewController.cs" />
+    <Compile Include="Subclassing\KSBookmarkParser.cs" />
+    <Compile Include="Subclassing\KSCustomAnnotationProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
