--- a/PSPDFKit-Demo-Xamarin.iOS.csproj
+++ b/PSPDFKit-Demo-Xamarin.iOS.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Subclassing\AnnotationTypes\IKSAnnotation.cs" />
     <Compile Include="Subclassing\AnnotationTypes\KSNoteAnnotationController.cs" />
     <Compile Include="Subclassing\KSPDFDocument.cs" />
+    <Compile Include="Subclassing\KSAnnotationToolbar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
