--- a/PSPDFKit-Demo-Xamarin.iOS.csproj
+++ b/PSPDFKit-Demo-Xamarin.iOS.csproj
@@ -112,6 +112,7 @@
     <Compile Include="KSStapleMenu\KSStapleMenu.cs" />
     <Compile Include="KSStapleMenu\KSStapleMenuItem.cs" />
     <Compile Include="Subclassing\KSVerticalAnnotationToolbarDelegate.cs" />
+    <Compile Include="Subclassing\AnnotationTypes\KSHighlightAnnotation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
