--- a/PSPDFKit-Demo-Xamarin.iOS.csproj
+++ b/PSPDFKit-Demo-Xamarin.iOS.csproj
@@ -82,7 +82,7 @@
     <Reference Include="monotouch" />
     <Reference Include="MonoTouch.Dialog-1" />
     <Reference Include="AlexTouch.PSPDFKit">
-      <HintPath>..\KS_PSPDFKit_Bindings\AlexTouch.PSPDFKit\bin\Debug\AlexTouch.PSPDFKit.dll</HintPath>
+      <HintPath>..\KS_PSPDFKitBindings\AlexTouch.PSPDFKit\bin\Debug\AlexTouch.PSPDFKit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -107,6 +107,9 @@
     <Compile Include="Subclassing\AnnotationTypes\KSNoteAnnotationController.cs" />
     <Compile Include="Subclassing\KSPDFDocument.cs" />
     <Compile Include="Subclassing\KSAnnotationToolbar.cs" />
+    <Compile Include="Customizing\KSCombinedTabBarController.cs" />
+    <Compile Include="KSBarButtonItem.cs" />
+    <Compile Include="Customizing\KSOutlineViewControllerDelegate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -185,5 +188,6 @@
     <Folder Include="Subclassing\" />
     <Folder Include="Kiosk\" />
     <Folder Include="Subclassing\AnnotationTypes\" />
+    <Folder Include="Customizing\" />
   </ItemGroup>
 </Project>
