--- a/PSPDFKit-Demo-Xamarin.iOS.csproj
+++ b/PSPDFKit-Demo-Xamarin.iOS.csproj
@@ -84,7 +84,7 @@
     <Reference Include="monotouch" />
     <Reference Include="MonoTouch.Dialog-1" />
     <Reference Include="AlexTouch.PSPDFKit">
-      <HintPath>..\KS_PSPDFKitBindings\AlexTouch.PSPDFKit\bin\Debug\AlexTouch.PSPDFKit.dll</HintPath>
+      <HintPath>..\KS_PSPDFKit_Bindings\AlexTouch.PSPDFKit\bin\Debug\AlexTouch.PSPDFKit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
